[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/SceneBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/img/btn-help-pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btn-help.png" type="Texture" id=5]
[ext_resource path="res://assets/img/btn-main-start.png" type="Texture" id=6]
[ext_resource path="res://assets/img/btn-main-start-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/img/btn-main-start-pressed.png" type="Texture" id=8]
[ext_resource path="res://themes/x_small_font.tres" type="DynamicFont" id=9]

[node name="MainMenu" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Control" parent="CanvasLayer" index="0"]
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
mouse_filter = 2
custom_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="0"]
margin_right = 984.0
margin_bottom = 50.0
mouse_filter = 2
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 30.0
margin_bottom = 50.0
rect_min_size = Vector2( 30, 30 )

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 34.0
margin_right = 950.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Classroom Tasking"
align = 1
valign = 1

[node name="HelpButton" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2" index="2"]
margin_left = 954.0
margin_right = 984.0
margin_bottom = 50.0
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="1"]
margin_top = 70.0
margin_right = 984.0
margin_bottom = 96.0
custom_constants/separation = 20
alignment = 1

[node name="EditTasksButton" type="LinkButton" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="0"]
margin_left = 442.0
margin_right = 541.0
margin_bottom = 26.0
text = "Select Tasks"

[node name="CenterContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="2"]
margin_top = 116.0
margin_right = 984.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Spacer" type="Control" parent="CanvasLayer/Control/VBoxContainer/CenterContainer" index="0"]
margin_right = 325.0
margin_bottom = 222.0
size_flags_horizontal = 3

[node name="StartButton" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/CenterContainer" index="1"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Spacer2" type="Control" parent="CanvasLayer/Control/VBoxContainer/CenterContainer" index="2"]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 222.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer" index="3"]
margin_top = 358.0
margin_right = 984.0
margin_bottom = 580.0
size_flags_vertical = 3

[node name="SavedSessionList" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/ScrollContainer" index="0"]
margin_right = 984.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/ScrollContainer/SavedSessionList" index="0"]
margin_top = 196.0
margin_right = 984.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 9 )
text = "Saved Sessions:"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/EditTasksButton" to="." method="_on_EditTasksButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/StartButton" to="." method="_on_StartButton_pressed"]
